# agent-spine

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  opencode.json
.github/: copilot-instructions.md
.github/pipelines/: ci.yml  release.yml
.github/workflows/: build.yml  ci.yml  entry.yml  lint.yml  release.yml  reusable-build.yml  stage-build.yml  stage-lint.yml  stage-release-publish.yml  stage-test.yml  test.yml
.opencode/: agent-brain.md
.opencode/hooks/agent-brain/: route_gate.py
.opencode/plugin/: agent-brain-route-gate.ts
agent-spine/: Cargo.toml  build.rs
agent-spine/proto/: supervisor.proto
agent-spine/src/: agent.rs  api.rs  async_sandbox.rs  brain_router.rs  budget_gate.rs  cancellation.rs  event.rs  execution.rs  execution_trace.rs  executor.rs  idempotency.rs  jetstream.rs  jetstream_bridge.rs  lib.rs  log.rs  main.rs  mcp_bridge.rs  mcp_server.rs  registry_workflow.rs  sandbox.rs  setup.rs  snapshot.rs  speculative_hydrate.rs  state.rs  supervisor.rs  transition.rs  update.rs  workflow.rs  workflow_manager.rs  workflows.rs
agent-spine/src/executor/: mod.rs  resilience.rs  runner.rs  scheduler.rs
agent-spine/tests/: bridge_tests.rs  engine_tests.rs  workflow_definition.rs  workflow_state.rs
dashboard/: package.json
dashboard/src/: App.svelte  app.css
docs/architecture/: 01-problem-and-design-goals.md  02-workflow-execution-model.md  03-brain-router-integration.md  04-concurrency-and-state.md  README.md
examples/: onboarding.yaml
scripts/: sign-macos.sh
src/: execution.rs  executor.rs  lib.rs  main.rs  router.rs  server.rs  snapshot.rs  state.rs  supervisor.rs  workflow.rs
tests/: engine_tests.rs  workflow_state.rs
vscode-dag/: README.md  package.json
vscode-dag/src/: extension.ts
workflows/: feature-from-spec.yaml
